--- a/src/GCF/FrontBundle/Resources/views/Default/Actors/actors.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Actors/actors.html.twig
@@ -11,13 +11,17 @@
         .hierarchie_result_lvl input:checked ~ ul {
             display: block;
         }
-        .hierarchie_result_lvl input ~ .fa-angle-double-down {
+        .hierarchie_result_lvl input ~ label .fa-hand-o-right {
+            color: #22AA86;
+        }
+        .hierarchie_result_lvl input ~ label .fa-hand-o-down {
+            display: none;
+            color: #22AA86;
+        }
+        .hierarchie_result_lvl input:checked ~ label .fa-hand-o-right {
             display: none;
         }
-        .hierarchie_result_lvl input:checked ~ .fa-angle-double-right {
-            display: none;
-        }
-        .hierarchie_result_lvl input:checked ~ .fa-angle-double-down {
+        .hierarchie_result_lvl input:checked ~ label .fa-hand-o-down {
             display: inline;
         }
 
@@ -29,17 +33,22 @@
             padding: 0.2em;
             border: 1px solid transparent;
         }
-        .hierarchie_result_lvl li:hover {
-            border: 1px solid #b3b3b3;
-            border-radius: 3px;
-        }
+        /*.hierarchie_result_lvl li:hover {*/
+            /*border: 1px solid #b3b3b3;*/
+            /*border-radius: 3px;*/
+        /*}*/
 
         #accordion .panel-default .panel-heading{cursor: pointer}
 
         .hierarchie_result_lvl ul{ padding-left: 15px }
 
         .hierarchie_result_lvl li label{ cursor: pointer;}
+
+        .hierarchie_result_lvl li label i{ margin-right: 10px}
+
         .hierarchie_result_lvl li i.fa-eye{cursor: pointer; margin-left: 20px}
+
+        .hierarchie_result_lvl span {cursor: pointer; font-weight: 600;}
 
         .page_overlay{
             display: none;
@@ -50,8 +59,9 @@
             bottom: 0;
             left: 0;
             margin: auto;
-            background: rgba(34, 170, 134, 0.3);
+            background: rgba(0, 0, 0, 0.4);
         }
+
         .popup_details_container{
             display: none;
             position: fixed;
@@ -62,18 +72,24 @@
             right: 0;
             left: 0;
             background: white;
-            width: 700px;
-            height: 400px;
+            min-height: 300px;
+            height: 300px;
+            width: 500px;
         }
-        .page_overlay .close_popup{
-            color:white;
-            margin-right:10px;
-            margin-top: 8px;
+
+        .popup_details_container .close_popup{
             position: absolute;
-            right: 0;
+            top: -6px;
+            right: -5px;
+            font-size: 20px;
+            color: red;
             cursor: pointer;
         }
-        .
+
+        .popup_details_container_inner{
+            padding: 20px;
+        }
+
     </style>
 {% endblock %}
 
@@ -88,10 +104,10 @@
 
                         <div class="panel panel-default">
                             <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapse{{ key }}" >
-                                <h4 class="panel-title">
+                                <h2 class="panel-title">
                                     <a href="{{ path('gcf_front_actorssectorpage', { 'id': sector.id}) }}" style="text-decoration: none;">{{ sector.nom }}</a>
                                      <i class="fa fa-caret-down" aria-hidden="true" style="float:right"></i>
-                                </h4>
+                                </h2>
                             </div>
                             {% set in='' %}
                             {% if key == 0 %}
@@ -114,6 +130,7 @@
 
             <div class="col-md-8">
                 <div class="hierarchie_result_lvl">
+
                     {% block actorsSector %}
                     {% endblock %}
                 </div>
@@ -124,10 +141,11 @@
     </div>
 
     <div class="page_overlay" onclick="closePop()">
-        <i class="fa fa-times fa-2x close_popup" aria-hidden="true" onclick="closePop()"></i>
+
     </div>
     <div class="popup_details_container">
-
+        <i class="fa fa-times-circle close_popup" aria-hidden="true" onclick="closePop()"></i>
+        <div class="popup_details_container_inner"></div>
     </div>
 {% endblock %}
 
@@ -141,7 +159,7 @@
             $('.popup_details_container').css('display', 'block');
 
             var toAppend = '';
-            toAppend = '<table class="table table-striped ">';
+            toAppend = '<table class="table table-striped table-bordered">';
             toAppend +=  '<thead></thead>';
             toAppend +=  '<tbody>';
             toAppend +=  ' <tr>';
@@ -159,16 +177,24 @@
             toAppend +=  '</tbody>';
             toAppend +=  '</table>';
 
-            $('.popup_details_container').append(toAppend);
+            $('.popup_details_container_inner').append(toAppend);
         }
         function closePop() {
 
             $('.page_overlay').css('display', 'none');
 
-            $('.popup_details_container').empty();
+            $('.popup_details_container_inner').empty();
 
             $('.popup_details_container').css('display', 'none');
 
         }
+    </script>
+
+
+
+
+    <script>
+
+
     </script>
 {% endblock %}
