--- a/src/GCF/FrontBundle/Resources/views/Default/index.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/index.html.twig
@@ -112,7 +112,7 @@
             <div class="col-md-6 col-sm-6 single_item "
                  style="background: #f7f7f7;border: solid 2px white; padding: 10px">
                 <div class="intro">
-                    <h2 class="section_title">Events</h2>
+                    <h2 class="section_title">Evénements</h2>
                 </div>
                 <div class="col-sm-12 item single_element">
                     <div class="row">
@@ -122,7 +122,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Project Name</h4>
+                            <h4 class="name">Evénement 1</h4>
                             <p class="theme"><strong>Date:</strong> 11-12-2000</p>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Pr...</p>
@@ -137,7 +137,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Project Name</h4>
+                            <h4 class="name">Evénement 2</h4>
                             <p class="theme"><strong>Date:</strong> 11-12-2000</p>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Pra...</p>
@@ -152,7 +152,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Project Name</h4>
+                            <h4 class="name">Evénement 3</h4>
                             <p class="theme"><strong>Date:</strong> 11-12-2000</p>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Pra...</p>
@@ -178,7 +178,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Project Name</h4>
+                            <h4 class="name">Document 1</h4>
                             <p class="theme"><strong>Sector:</strong> Energie</p>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Prae...</p>
@@ -193,7 +193,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Project Name</h4>
+                            <h4 class="name">Document 2</h4>
                             <p class="theme"><strong>Sector:</strong> Energie</p>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Prae...</p>
@@ -208,7 +208,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Project Name</h4>
+                            <h4 class="name">Document 3</h4>
                             <p class="theme"><strong>Sector:</strong> Energie</p>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Praes...</p>
@@ -234,7 +234,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Project Name</h4>
+                            <h4 class="name">Vidéos 1</h4>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Praesent aliquam in tellus eu gravi...</p>
                         </div>
@@ -248,7 +248,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Project Name</h4>
+                            <h4 class="name">Vidéos 2</h4>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Praesent aliquam in tellus eu gravi...</p>
                         </div>
@@ -262,7 +262,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Project Name</h4>
+                            <h4 class="name">Vidéos 3</h4>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Praesent aliquam in tellus eu gravi...</p>
                         </div>
@@ -291,7 +291,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <h4 class="name">Project Name</h4>
+                            <h4 class="name">Article 1</h4>
                             <p class="description">Aenean tortor est, vulputate quis leo
                                 in, vehicula rhoncus lacus. Praesent aliquam in tellus eu.</p>
                         </div>
@@ -303,7 +303,7 @@
                                 <img class="img-fluid" src="http://placehold.it/200x200" style="max-width: 100%;max-height: 100%"/></a>
                         </div>
                         <div class="col">
-                            <h4 class="name">Project Name</h4>
+                            <h4 class="name">Article 2</h4>
                             <p class="description"> Aenean tortor est, vulputate quis leo
                                 in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida.</p>
                         </div>
@@ -315,7 +315,7 @@
                                 <img class="img-fluid" src="http://placehold.it/200x200" style="max-width: 100%;max-height: 100%"/></a>
                         </div>
                         <div class="col">
-                            <h4 class="name">Project Name</h4>
+                            <h4 class="name">Article 3</h4>
                             <p class="description"> Aenean tortor est, vulputate quis leo
                                 in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida.</p>
                         </div>
@@ -327,7 +327,7 @@
                                 <img class="img-fluid" src="http://placehold.it/200x200" style="max-width: 100%;max-height: 100%"/></a>
                         </div>
                         <div class="col">
-                            <h4 class="name">Project Name</h4>
+                            <h4 class="name">Article 4</h4>
                             <p class="description"> Aenean tortor est, vulputate quis leo
                                 in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida.</p>
                         </div>
